--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 
             <ul>
                 <li>
-                    <a href="#">Home</a>
-                    <a href="#">About Me</a>  <!-- intrests, education, skills, cv ,languages -->
-                    <a href="#">Services </a>
-                    <a href="#">Projects</a>
-                    <a href="#">Contact Me</a>
+                    <a href="#header">Home</a>
+                    <a href="#aboutsection">About Me</a>  <!-- intrests, education, skills, cv ,languages -->
+                    <a href="#services">Services </a>
+                    <a href="#projects">Projects</a>
+                    <a href="#contact">Contact Me</a>
                 </li>
             </ul>
 
@@ -40,7 +40,7 @@
 </div>
 
 <!-------------About section------------->
-<div class="aboutsection">
+<div id="aboutsection">
    <div class="container">
     <h1 class="sectionhead">About Me</h1>
     <div class="about">
@@ -223,7 +223,7 @@
                     </p>
                     <p>Technologies used:HTML, CSS ,<br>
                          Javasript </p>
-                    <a href="">See Full Project</a>
+                    <a href="https://github.com/Sandra858/Portfolio.git ">See Full Project</a>
 
                 </div>
             </div>
@@ -238,7 +238,7 @@
                      Google Sheets, MS Access, <br>
                     Data Management Systems (DBMS), <br>
                      CRM software.</p>
-                    <a href="">See Full Project</a>
+                    <a href="https://github.com/Sandra858/Training-Projects.git">See Full Project</a>
                 </div>
                 
             </div>
@@ -253,7 +253,7 @@
                 <p>Technologies used:Mysql,<br>
                      python, Javasript, <br>
                       HTML, CSS </p>
-               <a href="">See Full Project</a>
+               <a href="https://github.com/Sandra858/Training-Projects.git">See Full Project</a>
                 </div>
             </div>
 
@@ -266,12 +266,12 @@
                 </p>
                 <p>Technologies used: <br>Javasript,<br>
                      HTML , CSS</p>
-               <a href="">See Full Project</a>
+               <a href="https://github.com/Sandra858/Training-Projects.git">See Full Project</a>
                 </div>
             </div>
         </div>
 
-        <a href="#" class="btn">See More Projects</a>
+        <a href="https://github.com/Sandra858/Training-Projects.git " class="btn">See More Projects</a>
     </div>
 </div>
 
@@ -289,7 +289,7 @@
                   <a href="mailto:jepichiisandra@gmail.com"><i class="fa-solid fa-envelope"></i></a>
                   <a href="https://wa.me/254727255011"><i class="fa-brands fa-whatsapp"></i></a>
                 </div>
-                <a href="images/my-cv.pdf" download class="btn btn2">Download CV </a>
+                <a href="images/SANDRA JEPICHII CV.pdf" download class="btn btn2">Download CV </a>
 
             </div>
 
@@ -317,6 +317,25 @@
 </footer>
 
 
-
+<!-------Little tiny Javascript------->
+<!-- Form the contact form -->
+<script>
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbwnlTwubNZ-DfMpf822iZN7FknfJxKb20_zl-wMN3GtavkHDTZ0cPdqxI-nzIJmtZx7kA/exec'
+    const form = document.forms['submit-to-google-sheet']
+    const msg =document.getElementById("msg")
+  
+    form.addEventListener('submit', e => {
+      e.preventDefault()
+      fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+        .then(response => {
+            msg.innerHTML = "Message sent successfully!"
+            setTimeout(function(){
+                msg.innerHTML =""
+            },30000)
+            form.reset()
+        })
+        .catch(error => console.error('Error!', error.message))
+    })
+  </script>
 </body>
 </html>
